@@ -1,4 +1,8 @@
 
+2018-06-24  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
+
+	* system.def: bug #527 system call x'91' *always* uses three parameters
+
 2018-06-21  Brian Tiffin <btiffin@gnu.org>
 
 	* common.h, intrinsic.c: Added CONTENT-LENGTH and CONTENTS-OF
